# ultimate-fastapi-tutorial

./: .gitignore  README.md
part-03-query-parameters/: README.md  pyproject.toml
part-09-async/: README.md  alembic.ini  prestart.py  pyproject.toml
part-09-async/alembic/: env.py
part-09-async/app/: __init__.py  backend_pre_start.py  initial_data.py  main.py
part-09-async/app/api/api_v1/: api.py
part-09-async/app/api/api_v1/endpoints/: recipe.py
part-09-async/app/core/: config.py
part-09-async/app/crud/: base.py  crud_user.py
part-09-async/app/db/: init_db.py  session.py
part-09-async/app/models/: recipe.py
part-09-async/app/schemas/: recipe.py
part-13-docker-deployment/backend/app/: pyproject.toml  run.sh
part-13-docker-deployment/backend/app/alembic/versions/: ec46ad7fc181_added_all_tables.py
part-13-docker-deployment/backend/app/app/: main.py
part-13-docker-deployment/backend/app/app/api/: deps.py
part-13-docker-deployment/backend/app/app/api/api_v1/: api.py
part-13-docker-deployment/backend/app/app/clients/: reddit.py
part-13-docker-deployment/backend/app/app/core/: config.py
part-13-docker-deployment/backend/app/app/crud/: __init__.py
part-13-docker-deployment/backend/app/app/db/: init_db.py  session.py
part-13-docker-deployment/backend/app/app/schemas/: recipe.py  user.py
part-13-docker-deployment/backend/app/app/tests/: conftest.py
part-7-database/: .flake8  pyproject.toml
part-7-database/alembic/: env.py
part-7-database/alembic/versions/: 238090727082_added_user_and_recipe_tables.py
part-7-database/app/: backend_pre_start.py  initial_data.py  main.py  recipe_data.py
part-7-database/app/crud/: __init__.py  base.py  crud_recipe.py  crud_user.py
part-7-database/app/db/: init_db.py  session.py
part-7-database/app/models/: recipe.py  user.py
part-7-database/app/schemas/: __init__.py  recipe.py  user.py
part-7-database/app/templates/: index.html
(+222 files in other folders)
