[tool.poetry]
name = "app"
version = "0.0.1"
description = "Ultimate FastAPI Tutorial Part 5"
authors = ["ChristopherGS"]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "~0.11.3"
fastapi = "~0.58.1"
python-multipart = "~0.0.5"
pydantic = {extras = ["email"], version = "~1.4"}
Jinja2 = "^3.0.1"
SQLAlchemy = "^1.4.22"
alembic = "^1.6.5"
tenacity = "^8.0.1"
